fix: "Social account buttons are not aligned and don't have space between" fixed #23

--- a/wordnest/static/css/style.css
+++ b/wordnest/static/css/style.css
@@ -347,16 +347,28 @@ input:not([type="file" i], [type="image" i], [type="checkbox" i], [type="radio" 
     gap: 30px;
 }
 
+/* Style for social account links */
+
+.auth_social_container {
+    align-self: center;
+    transform: translateY(-20px);
+    font-size: var(--small-fs);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
 .social_account_container {
     display: flex;
-    justify-content: space-around;
-    width: 40%;
+    justify-content: space-between;
+    width: 100px;
 }
 
 .social_account_container img {
     transition: filter 0.5s;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
 }
 
 .social_account_container img, .submit_bt {
